@@ -39,4 +39,5 @@
     <string id="21026">Delete &amp; Set Watched</string>
     <string id="21027">Delete &amp; Clear Watched</string>
     <string id="21028">Delete &amp; Set Don't Like</string>
+    <string id="21029">Delete / Wrong Recording</string>
 </strings>
